fixed footer n gallery heading length

--- a/gallery.html
+++ b/gallery.html
@@ -26,10 +26,14 @@
         }
         .gallery-banner {
             text-align: center;
-            width: 100vw;
+            width: auto;
             /* max-width: 1000px; */
             height: 9vh;
             background-color: rgb(169, 169, 169);
+        }
+        #contactus iframe{
+            width: 90%;
+            height: 40vh;
         }
 
     </style>
@@ -50,7 +54,7 @@
 <body>
 
     <div class="gallery-banner">
-        <h1 style="margin-top: 2px;">Welcome to Our News Gallery</h1>
+        <h1 style="margin-top: 2px; margin-bottom: -2px;">Welcome to Our News Gallery</h1>
         <p><i>Get the latest news and updates from our newsletter!</i></p>
     </div>
 
