added fevicon to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo.png" type="image/png">
     <style>
         .news-snippet {
             display: flex;
@@ -54,7 +55,7 @@
 <body>
 
     <div class="gallery-banner">
-        <h1 style="margin-top: 2px; margin-bottom: -2px;">Welcome to Our News Gallery</h1>
+        <h1 style="margin-top: 2px; margin-bottom: -9px;">Welcome to Our News Gallery</h1>
         <p><i>Get the latest news and updates from our newsletter!</i></p>
     </div>
 
