fixed hero/banner img size in index.html n a minor change in gallery.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <style>
         .banner{
             position: relative;
+            
             /* background-color: red; */
+            width: auto;
+
             height: 80vh;
             font-weight: 900;
             width: auto;
@@ -19,12 +22,14 @@
             
         }
         #banner-img{
+            width: 100%;
+
             position: absolute;
             /* background-color: black; */
             top: 0;
             left: 0;
             height: 100%;
-            width: 2200px;
+            /* width: 2200px; */
             background-image: url('https://media.istockphoto.com/id/1351628037/photo/white-collar-workers-are-engagement-and-meeting.jpg?s=612x612&w=0&k=20&c=Ad_0Fx3YuYnnP3nChpaK7euDW_H3M9lcibsLk-54yPY=');
             /* background-repeat: no-repeat; */
             background-size: contain;
