--- a/gallery.html
+++ b/gallery.html
@@ -31,10 +31,21 @@
             /* max-width: 1000px; */
             height: 9vh;
             background-color: rgb(169, 169, 169);
+            margin-top: 4.5%;
         }
         #contactus iframe{
             width: 90%;
             height: 40vh;
+        }
+        header{
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+        header nav{
+            padding-right: 20px;
         }
 
     </style>
