--- a/gallery.html
+++ b/gallery.html
@@ -173,7 +173,7 @@
         
 
     </nav>
-    <p>&copy; 2024 BookWorm Reviews. All rights reserved.</p>
+    <p>&copy; 2024 NewsRoom. All rights reserved.</p>
     <hr><br>
 </footer>
 </html>
